<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/menuHeure"
        android:visibility="gone"
        android:clickable="true"
        android:background="#af000000">

        <GridLayout
            android:layout_width="310dip"
            android:layout_height="480dip"
            android:rowCount="6"
            android:columnCount="6"
            android:background="#c8000000"
            android:padding="10dip"
            android:layout_gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="6">

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rowCount="5"
                    android:columnCount="2">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/nom_devoir"
                        android:textColor="#FFF"
                        android:id="@+id/menuHeureNomDevoir"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:layout_columnSpan="2"
                        />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/_6h30_10h10"
                        android:textColor="#FFF"
                        android:id="@+id/menuHeure_HeureSuivante"
                        android:layout_row="1"
                        android:layout_column="0"
                        android:layout_columnSpan="2"/>

                    <ImageView
                        android:layout_width="25dip"
                        android:layout_height="25dip"
                        android:src="@drawable/energie"
                        android:layout_row="2"
                        android:layout_column="0"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dip"
                        android:text="@string/energie"
                        android:textColor="#fff200"
                        android:layout_row="2"
                        android:layout_column="1"
                        android:gravity="center"
                        android:layout_marginStart="3dip"
                        android:id="@+id/menuHeure_coutEnergie"/>

                    <ImageView
                        android:layout_width="25dip"
                        android:layout_height="25dip"
                        android:src="@drawable/faim"
                        android:layout_row="3"
                        android:layout_column="0"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dip"
                        android:text="@string/faim"
                        android:textColor="#c64900"
                        android:layout_row="3"
                        android:layout_column="1"
                        android:gravity="center"
                        android:layout_marginStart="3dip"
                        android:id="@+id/menuHeure_coutFaim"/>

                    <ImageView
                        android:layout_width="25dip"
                        android:layout_height="25dip"
                        android:src="@drawable/sante"
                        android:layout_row="4"
                        android:layout_column="0"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dip"
                        android:text="@string/sante"
                        android:textColor="#ff0000"
                        android:layout_row="4"
                        android:layout_column="1"
                        android:gravity="center"
                        android:layout_marginStart="3dip"
                        android:id="@+id/menuHeure_coutSante"/>
                </GridLayout>

                <com.github.lzyzsd.circleprogress.DonutProgress
                    android:layout_height="85dip"
                    android:layout_width="85dip"
                    android:layout_row="0"
                    android:layout_column="5"
                    android:layout_gravity="end"
                    app:donut_unfinished_stroke_width="4dip"
                    app:donut_finished_stroke_width="8dip"
                    android:id="@+id/progressionDevoir"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="175dip"
                android:layout_row="2"
                android:layout_rowSpan="3"
                android:layout_column="3"
                android:layout_columnSpan="3">

                <ImageButton
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:src="@drawable/increase"
                    android:background="#00a25c5c"
                    android:scaleType="fitCenter"
                    android:onClick="SelectionHeure"
                    android:id="@+id/increase" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heure"
                    android:textSize="100sp"
                    android:textColor="#FFF"
                    android:id="@+id/nbHeure"
                    android:layout_below="@id/increase"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heures"
                    android:textSize="30sp"
                    android:textColor="#FFF"
                    android:layout_toEndOf="@id/nbHeure"
                    android:layout_below="@id/increase"
                    android:layout_marginTop="40dip"
                    android:layout_centerVertical="true"/>

                <ImageButton
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:src="@drawable/decrease"
                    android:background="#00a25c5c"
                    android:scaleType="fitCenter"
                    android:onClick="SelectionHeure"
                    android:id="@+id/decrease"
                    android:layout_below="@id/nbHeure"/>
            </RelativeLayout>


            <ImageButton
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:padding="5dip"
                android:src="@drawable/valider"
                android:background="@drawable/style_bouton_valider"
                android:scaleType="fitCenter"
                android:layout_row="5"
                android:layout_column="5"
                android:layout_gravity="end"
                android:onClick="SelectionHeure"
                android:id="@+id/valider"/>

            <ImageButton
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:padding="5dip"
                android:scaleType="fitCenter"
                android:background="@drawable/style_bouton_quitter"
                android:src="@drawable/quitter"
                android:onClick="OuvreMenuAction"
                android:id="@+id/btnFermer"
                android:layout_row="5"
                android:layout_column="0"/>
        </GridLayout>
    </FrameLayout>
</LinearLayout>