<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFF"
    tools:context="info.dicj.lelab4.MainActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="2"
        android:id="@+id/stats"
        android:layout_marginStart="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/argent"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/argent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sante"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sante"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/energie"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/energie"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/faim"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faim" />
    </GridLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dip"
        android:background="#000"
        android:layout_alignBottom="@id/stats"
        android:id="@+id/ligne"
        android:layout_marginBottom="10dip"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ligne"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:src="@drawable/manger"
                android:scaleType="fitEnd"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:background="@drawable/mangertitre"
                android:id="@+id/manger"
                android:layout_marginBottom="2dip"/>

            <ImageButton
                android:src="@drawable/travailler"
                android:scaleType="fitEnd"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:background="@drawable/travaillertitre"
                android:id="@+id/travailler"
                android:layout_marginBottom="2dip"/>

            <ImageButton
                android:src="@drawable/dormir"
                android:scaleType="fitEnd"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:layout_weight="1"
                android:background="@drawable/dormirtitre"
                android:id="@+id/dormir"
                android:layout_marginBottom="2dip"/>

            <ImageButton
                android:src="@drawable/attendre"
                android:scaleType="fitEnd"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:layout_weight="1"
                android:background="@drawable/attendretitre"
                android:id="@+id/attendre"
                android:layout_marginBottom="2dip"/>

            <ImageButton
                android:src="@drawable/devoir"
                android:scaleType="fitEnd"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:layout_weight="1"
                android:background="@drawable/devoirstitre"
                android:id="@+id/devoir"
                android:layout_marginBottom="2dip"/>

            <ImageButton
                android:src="@drawable/argent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/style_bouton"/>

            <ImageButton
                android:src="@drawable/argent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/style_bouton"/>

            <ImageButton
                android:src="@drawable/argent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/style_bouton"/>
        </TableLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>