<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dip"
        android:background="@drawable/border_accueil_colnet"
        android:id="@+id/accueil">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stats_colnet"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dip"
        android:orientation="vertical"
        android:background="@drawable/border_titre_colnet"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dip"
            android:layout_margin="20dip"
            android:orientation="vertical"
            android:background="@drawable/border_titre_colnet"
            android:id="@+id/stats_base">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/statistiques_de_base"
                android:textColor="#000"
                android:background="@drawable/border_titre_colnet_bg"
                android:paddingLeft="5dip"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_margin="5dip"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="40dip"
                        android:layout_height="40dip"
                        android:src="@drawable/argent"
                        android:layout_marginEnd="5dip"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100"
                        android:layout_marginEnd="20dip"/>

                    <ImageView
                        android:layout_width="40dip"
                        android:layout_height="40dip"
                        android:src="@drawable/sante"
                        android:layout_marginEnd="5dip"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100" />
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_margin="5dip"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="40dip"
                        android:layout_height="40dip"
                        android:src="@drawable/faim"
                        android:layout_marginEnd="5dip"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100"
                        android:layout_marginEnd="20dip"/>

                    <ImageView
                        android:layout_width="40dip"
                        android:layout_height="40dip"
                        android:src="@drawable/energie"
                        android:layout_marginEnd="5dip"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100" />
                </LinearLayout>

            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dip"
            android:layout_margin="20dip"
            android:orientation="vertical"
            android:background="@drawable/border_titre_colnet"
            android:layout_below="@id/stats_base">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connaissance"
                android:textColor="#000"
                android:background="@drawable/border_titre_colnet_bg"
                android:paddingLeft="5dip"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>